fix header gap

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ img.logo{
 }
 
 li, i{
-    margin-right: 10px;
+    gap: 10px;
 }
 
 /*------------
